--- a/_posts/2013-11-07-01.md
+++ b/_posts/2013-11-07-01.md
@@ -11,4 +11,9 @@ categories: week
 
 {% comment %}
 [Bug 2](http://jsbin.com/OFOkuHa/1/edit)
+[Bug 3](http://jsbin.com/ApiVaqUw/1/edit)
+
+### Exercise
+
+[Make it real](http://jsbin.com/ApiVaqUw/1/edit)
 {% endcomment %}
