--- a/_posts/2013-11-07-01.md
+++ b/_posts/2013-11-07-01.md
@@ -7,13 +7,18 @@ categories: week
 
 ### Bugs
 
-[Bug 1](http://jsbin.com/eKiRaJE/1/edit)
-
+- [Bug 1](http://jsbin.com/eKiRaJE/1/edit)
 {% comment %}
-[Bug 2](http://jsbin.com/OFOkuHa/1/edit)
-[Bug 3](http://jsbin.com/ApiVaqUw/1/edit)
+- [Bug 2](http://jsbin.com/OFOkuHa/1/edit)
+- [Bug 3](http://jsbin.com/ApiVaqUw/1/edit)
 
-### Exercise
+### Assignment
 
 [Make it real](http://jsbin.com/ApiVaqUw/1/edit)
+
+### Challenges
+
+1. Create your own personal page using the tags you’ve learned in class
+2. Find 3 tags we haven’t talked about in class and use them in your personal page from challenge 2
+
 {% endcomment %}
