--- a/_posts/2013-11-07-01.md
+++ b/_posts/2013-11-07-01.md
@@ -7,9 +7,10 @@ categories: week
 
 ### Bugs
 
-- [Bug 1](http://jsbin.com/eKiRaJE/1/edit)
-- [Bug 2](http://jsbin.com/OFOkuHa/1/edit)
-- [Bug 3](http://jsbin.com/ApiVaqUw/1/edit)
+- [Tag bug 1](http://jsbin.com/eKiRaJE/1/edit)
+- [Tag bug 2](http://jsbin.com/OFOkuHa/1/edit)
+- [Tag bug 3](http://jsbin.com/ApiVaqUw/1/edit)
+- [Image bug](http://jsbin.com/uqotUCO/1/edit)
 
 ### Assignment
 
