--- a/_posts/2013-11-07-01.md
+++ b/_posts/2013-11-07-01.md
@@ -18,5 +18,7 @@ categories: week
 
 ### Challenges
 
-1. Create your own personal page using the tags you’ve learned in class
-2. Find 3 tags we haven’t talked about in class and use them in your personal page from challenge 2
+1. Create your own personal page using the tags you’ve learned in class.
+2. Find 3 tags we haven’t talked about in class and include them in your page.
+3. Include at least 2 images.
+4. Include at least 2 links.
