Test through Prose.

--- a/_posts/2013-11-07-01.md
+++ b/_posts/2013-11-07-01.md
@@ -1,8 +1,9 @@
 ---
 layout: post
-title:  "Week 1"
-date:   2013-11-07
+title: "Week #1"
+date: {}
 categories: week
+published: true
 ---
 
 ### Bugs
