Added notes from 11/07

--- a/_posts/2013-11-07-01.md
+++ b/_posts/2013-11-07-01.md
@@ -1,9 +1,7 @@
 ---
 layout: post
 title: "Week #1"
-date: {}
 categories: week
-published: true
 ---
 
 ### Bugs
@@ -23,3 +21,69 @@ published: true
 2. Find 3 tags we haven’t talked about in class and include them in your page.
 3. Include at least 2 images.
 4. Include at least 2 links.
+
+## Notes from class
+
+### Paragraph
+
+{% highlight html %}
+<p>A paragraph of text</p>
+{% endhighlight %}
+
+### Heading
+
+{% highlight html %}
+<h1>H1 is the largest</h1>
+<h6>H6 is the smallest</h6>
+{% endhighlight %}
+
+### Styling
+
+{% highlight html %}
+<i>This will be italics</i>
+<b>This will be bold</b>
+{% endhighlight %}
+
+### Numbered (ordered) List
+
+{% highlight html %}
+<ol>
+    <li>Item one</li>
+    <li>Item two</li>
+    <li>Item three</li>
+</ol>
+{% endhighlight %}
+
+### Bulletted (unordered) List
+
+{% highlight html %}
+<ul>
+    <li>Item one</li>
+    <li>Item two</li>
+    <li>Item three</li>
+</ul>
+{% endhighlight %}
+
+### Image (from internet)
+
+{% highlight html %}
+<img src="http://cdn.media910.whipplehill.net/ftpimages/348/photo/large_photo46790_2483609.jpg">
+{% endhighlight %}
+
+With width defined:
+
+{% highlight html %}
+<img src="http://cdn.media910.whipplehill.net/ftpimages/348/photo/large_photo46790_2483609.jpg" width="200">
+{% endhighlight %}
+
+With alternate text defined:
+
+{% highlight html %}
+<img src="LAKJSDFASDFASDF" alt="Latin at 150">
+{% endhighlight %}
+
+### Link
+
+{% highlight html %}
+<a href="http://www.latinschool.org/Page/About/At-a-Glance">Latin School</a>
+{% endhighlight %}
