--- a/_posts/2013-11-07-01.md
+++ b/_posts/2013-11-07-01.md
@@ -87,3 +87,9 @@ With alternate text defined:
 {% highlight html %}
 <a href="http://www.latinschool.org/Page/About/At-a-Glance">Latin School</a>
 {% endhighlight %}
+
+### Trouble shooting: It’s not doing what I want it to do!
+
+- Have you closed your tag?
+- Have you included the slash in your tag?
+- In JS Bin, are any of your tags red?
