More week 2 content.

--- a/_posts/2013-11-14-02.md
+++ b/_posts/2013-11-14-02.md
@@ -4,6 +4,20 @@ title: "Week #2"
 categories: week
 ---
 
-### Images
+### Validation problems
 
-- [Images JSBin](http://jsbin.com/ezaXOpO/1/edit)
+- [Problem 1](http://jsbin.com/uRaTeQu/1/edit)
+- [Problem 2](http://jsbin.com/osenUjO/1/edit)
+
+### CSS
+
+- [Making a header red](http://jsbin.com/OgUyEQu/1/edit)
+
+### CSS Bugs
+
+- [Bug 1](http://jsbin.com/EcoleGOk/1/edit)
+
+### Make it true
+
+- [#1](http://jsbin.com/okiZUKI/1/edit)
+- [#2](http://jsbin.com/UfOBeYUP/1/edit)
