chicago fire page start

--- a/_posts/2013-11-21-03.md
+++ b/_posts/2013-11-21-03.md
@@ -7,3 +7,8 @@ categories: week
 ### Assessment
 
 - [Problem 1](http://jsbin.com/OlIleki/1/edit)
+
+
+### Chicago Fire Page
+
+1. [Starting point](http://jsbin.com/oKOxAPOT/1/edit )
