--- a/_posts/2013-11-21-03.md
+++ b/_posts/2013-11-21-03.md
@@ -8,7 +8,15 @@ categories: week
 
 - [Problem 1](http://jsbin.com/OlIleki/1/edit)
 
-
 ### Chicago Fire Page
 
 1. [Starting point](http://jsbin.com/oKOxAPOT/1/edit )
+
+### Boxes
+
+1. [A column of boxes](http://jsbin.com/axicITU/1/edit)
+2. [Red box fixed](http://jsbin.com/axicITU/2/edit)
+3. [Red box fixed and wide](http://jsbin.com/axicITU/3/edit)
+4. [Red box moved relatively](http://jsbin.com/aqEFUqiG/1/edit)
+5. [Red box moved absolutely](http://jsbin.com/aqEFUqiG/2/edit)
+6. [Red box moved absolutely off-screen](http://jsbin.com/aqEFUqiG/3/edit)
