adds inline block challenge

--- a/_posts/2013-12-05-04.md
+++ b/_posts/2013-12-05-04.md
@@ -14,12 +14,17 @@ categories: week
 
 ### Inline-block
 
-- [Get these puppies displayed horizontally](http://jsbin.com/EwADUYET/1/edit)
-- ["display:inline" doesn't work. Why?](http://jsbin.com/EwADUYET/2/edit)
-- [Use "display: inline-block"](http://jsbin.com/EwADUYET/6/edit)
-- [Add some basic styles](http://jsbin.com/EwADUYET/8/edit)
+- Get these puppies displayed horizontally[link](http://jsbin.com/EwADUYET/1/edit)
+- "display:inline" doesn't work. Why? [link](http://jsbin.com/EwADUYET/2/edit)
+- Use "display: inline-block"[link](http://jsbin.com/EwADUYET/6/edit)
+- Add some basic styles[link](http://jsbin.com/EwADUYET/8/edit)
 
 ### Inline-block exercises
 
 - [Exercise 1](http://jsbin.com/iSAHeCut/1/edit)
+- [Exercise 2](http://jsbin.com/oCOQOHA/1/edit)
+
+### Inline-block challenge
+
+- [Ferrofluid](https://github.com/CodingClub/ferrofluid)
 
