adds full-width slides assignment

--- a/_posts/2013-12-19-06.md
+++ b/_posts/2013-12-19-06.md
@@ -12,4 +12,7 @@ categories: week
 
 - [Transitions Challenge](http://jsbin.com/aQAZIka/1/edit)
 
+### Full-width slides
+
+- [Build this site](https://github.com/CodingClub/full-width-slides)
 
