--- a/_posts/2013-12-19-06.md
+++ b/_posts/2013-12-19-06.md
@@ -4,7 +4,7 @@ title: "Week #6"
 categories: week
 ---
 
-- Learn the full-width slides pattern
+- Learn the full-height slides pattern
 - Use height: 100%;
 - Use background-attachment: fixed
 
@@ -14,5 +14,5 @@ categories: week
 
 ### Full-width slides
 
-- [Build this site](https://github.com/CodingClub/full-width-slides)
+- [Build this site](https://github.com/CodingClub/full-height-slides)
 
